WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276592
[GTK][WPE] Fix ASan clang build
https://bugs.webkit.org/show_bug.cgi?id=276592
Summary
[GTK][WPE] Fix ASan clang build
Philippe Normand
Reported
2024-07-14 09:52:01 PDT
The invalid-offsetof warning in Vector.h should be ignored for GCC and clang on linux, not only for GCC (iiuc).
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-07-14 10:02:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30800
EWS
Comment 2
2024-07-15 12:35:19 PDT
Committed
280978@main
(ed8de7bc8856): <
https://commits.webkit.org/280978@main
> Reviewed commits have been landed. Closing PR #30800 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug