[GTK][WPE] Fix ASan clang build https://bugs.webkit.org/show_bug.cgi?id=276592

Reviewed by Michael Catanzaro.

The invalid-offsetof warning in Vector.h should be ignored for GCC and clang on linux, not only for
GCC.

* Source/WTF/wtf/Vector.h:
(WTF::VectorBuffer::endOfBuffer):

Canonical link: https://commits.webkit.org/280978@main